# RDMA

./: .gitignore  CMakeLists.txt
basic-arch/src/: client.c
mem-registration/: memory_registration.c
src/: server.c
